# EVA

./: CMakeLists.txt  Cargo.toml  README.md  index.html  package-lock.json  package.json  requirements.txt  tailwind.config.js
docs/: architecture.md
ofo-core/cpp/include/: policy_engine.h  reinforcement_learning.h
ofo-core/cpp/src/: main.cpp  policy_engine.cpp  reinforcement_learning.cpp
ofo-core/data/: sample_input.json
ofo-core/rust/src/: kill_switch.rs  knowledge_fusion_engine.rs  lease_manager.rs  main.rs  policy_engine.rs
ofo-core/src/: api_server.py  context_engine.py  eva_core.py  knowledge_fusion_engine.py  lease_manager.py  main.py  memory_system.py  openai_integration.py  policy_engine.py
public/: manifest.json  sw.js
src/: App.tsx  index.css  main.tsx
src/components/: ArchitectureView.tsx  ChatInterface.tsx  CoreStatus.tsx  Dashboard.tsx  Header.tsx  SystemOverview.tsx  TrainingInterface.tsx  VoiceButton.tsx
supabase/migrations/: 20251001165035_create_eva_knowledge_system.sql
tests/: test_sample.py
tests/cpp_tests/: test_policy_engine.cpp
